// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupportLinks Cсылка "Пожаловаться" заменилась на ФОС 1`] = `
<div>
  <div
    class="SupportLinks"
  >
    <a
      class="Link SupportLinks-Link"
      href="https://forms.yandex.ru/surveys/10023469.2596112ebb92735d531815bd8ca83c8860c8c25f/?shopname=example.com/test"
      target="_blank"
    >
      Пожаловаться
    </a>
    <a
      class="Link SupportLinks-Link"
      href="http://example.com/test"
      target="_blank"
    >
      Оригинальный сайт
    </a>
  </div>
</div>
`;

exports[`SupportLinks Добавляется дополнительный класс 1`] = `
<div>
  <div
    class="SupportLinks from-test"
  >
    <a
      class="Link SupportLinks-Link"
      href="https://yandex.ru/support/abuse/troubleshooting/turbo/list.html"
      target="_blank"
    >
      Пожаловаться
    </a>
    <a
      class="Link SupportLinks-Link"
      href="http://example.com/test"
      target="_blank"
    >
      Оригинальный сайт
    </a>
  </div>
</div>
`;

exports[`SupportLinks Добавляется ссылка на оригинал 1`] = `
<div>
  <div
    class="SupportLinks"
  >
    <a
      class="Link SupportLinks-Link"
      href="https://yandex.ru/support/abuse/troubleshooting/turbo/list.html"
      target="_blank"
    >
      Пожаловаться
    </a>
    <a
      class="Link SupportLinks-Link"
      href="http://example.com/test"
      target="_blank"
    >
      Оригинальный сайт
    </a>
  </div>
</div>
`;

exports[`SupportLinks Рендерится без ошибок 1`] = `
<div>
  <div
    class="SupportLinks"
  >
    <a
      class="Link SupportLinks-Link"
      href="https://yandex.ru/support/abuse/troubleshooting/turbo/list.html"
      target="_blank"
    >
      Пожаловаться
    </a>
  </div>
</div>
`;
